@@ -198,14 +198,15 @@ void MIDI_Task(void)
 		/* Read the MIDI event packet from the endpoint */
 		Endpoint_Read_Stream_LE(&MIDIEvent, sizeof(MIDIEvent));
 	
-		if (MIDIEvent.Command == (MIDI_COMMAND_NOTE_ON >> 4))
+		/* Check to see if the sent command is a note on message with a non-zero velocity */
+		if ((MIDIEvent.Command == (MIDI_COMMAND_NOTE_ON >> 4)) && (MIDIEvent.Data3 > 0))
 		{
 			/* Change LEDs depending on the pitch of the sent note */
 			LEDs_SetAllLEDs(MIDIEvent.Data2 > 64 ? LEDS_LED1 : LEDS_LED2);
 		}
 		else
 		{
-			/* Turn off all LEDs in response to non-Note On messages */
+			/* Turn off all LEDs in response to non Note On messages */
 			LEDs_SetAllLEDs(LEDS_NO_LEDS);
 		}
 	
